k8s/openfaas/prometheus-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: openfaas
spec:
  type: ExternalName
  externalName: monitoring-kube-prometheus-prometheus.monitoring.svc.cluster.local
  ports:
    - port: 9090
      targetPort: 9090
